@@ -413,7 +413,12 @@ module BR = Branch_relaxation.Make (struct
       if memory_chunk = Byte_signed
       then load_store_size addressing_mode + 1
       else load_store_size addressing_mode
-    | Lop(Istore(_chunk, addr, _)) -> load_store_size addr
+    | Lop(Istore(chunk, addr, assignment)) ->
+        (match chunk with
+         | Single -> 1
+         | Word_int | Word_val when assignment -> 1
+         | _ -> 0)
+        + load_store_size addr
     | Lop(Ialloc _) -> 5
     | Lop(Ispecific(Ialloc_far _)) -> 6
     | Lop(Ipoll { return_label = Some(_) }) -> 5
@@ -680,6 +685,10 @@ let emit_instr env i =
         end;
         if memory_chunk = Byte_signed then
           `	extsb	{emit_reg i.res.(0)}, {emit_reg i.res.(0)}\n`
+    | Lop(Istore(Single, addr, _assignment)) ->
+        let tmp = phys_reg 100 (* FPR 0 *) in
+        `	frsp	{emit_reg tmp}, {emit_reg i.arg.(0)}\n`;
+        emit_load_store "stfs" addr i.arg 1 tmp
     | Lop(Istore(chunk, addr, assignment)) ->
         let storeinstr =
           match chunk with
@@ -687,7 +696,7 @@ let emit_instr env i =
           | Sixteen_unsigned | Sixteen_signed -> "sth"
           | Thirtytwo_unsigned | Thirtytwo_signed -> "stw"
           | Word_int | Word_val -> "std"
-          | Single -> "stfs"
+          | Single -> assert false
           | Double -> "stfd" in
         (* Non-initializing stores need a memory barrier to follow the
            Multicore OCaml memory model.  Stores of size other than
